welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:31: error: ')' expected but ';' found.
	droite();
                ^